# india-runs-hackathon

./: .gitattributes  .gitignore  ASSESSMENT.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  submission.csv  submission_metadata.yaml
artifacts/: dense_embeddings.npy
docs/: README-CI.md  ci-workflow.yml
engine/: __init__.py  features.py  integrity.py  rank.py  reason.py  rubric.py  score.py  signals.py
engine/tests/: factories.py  test_engine.py
scripts/: build_deck.py  precompute_embeddings.py
web/: README.md  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/rank/: route.ts
web/components/: CandidateCard.tsx  Hero.tsx  RankExplorer.tsx  SiteNav.tsx
web/components/ui/: Reveal.tsx  Wordmark.tsx  dataviz.tsx  primitives.tsx
web/lib/: ranker.ts  rubric.ts  score-ui.ts  types.ts
