[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "india-runs-hackathon"
version = "1.0.0"
description = "Explainable, CPU-only candidate ranking engine for the Redrob Intelligent Candidate Discovery & Ranking Challenge."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["numpy>=1.26", "scikit-learn>=1.4"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "python-pptx>=0.6.23", "pymupdf>=1.24"]
dense = ["sentence-transformers>=2.7"]

[project.scripts]
redrob-rank = "engine.rank:main"

[tool.setuptools]
packages = ["engine"]

[tool.pytest.ini_options]
testpaths = ["engine/tests"]
